# dd-opentracing-cpp

./: .clang-format  .dockerignore  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Dependencies.cmake  LICENSE  LICENSE-3rdparty.csv  MODULE.bazel  NOTICE  README.md  WORKSPACE  configuration.md  docker-compose.yml  nginx-opentracing-datadog.patch  vcpkg.json
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
doc/: configuration.md  sampling.md
envoy-tracing/: Dockerfile-ddopentracing-envoy  Dockerfile-ddopentracing-service  NOTICE  docker-compose.yml  front-envoy.yaml  service-envoy.yaml  service.py
examples/cpp-tracing/compiled-in/: Dockerfile  agent.dockerfile  agent.js  build_and_run_example.sh  describe.json  docker-compose.yml  tracer_example.cpp
examples/cpp-tracing/dynamic-loading/: Dockerfile  Dockerfile-fromsource  build_and_run_example.sh  docker-compose.yml  run_things.sh  tracer_example.cpp  tracer_example_char.cpp  tracer_example_string.cpp
examples/cpp-tracing/fastcgi-app/: Dockerfile.fastcgi-app  Dockerfile.nginx  Dockerfile.traced-backend  app.cpp  datadog-config.json  docker-compose.yaml  nginx.conf  traced_backend.go
examples/cpp-tracing/unix-domain-socket/: Dockerfile  README.md  docker-compose.yaml  tracer_example.cpp
examples/envoy-tracing/: Dockerfile-ddopentracing-envoy  Dockerfile-ddopentracing-service  README.md  check_envoy_configs.sh  docker-compose.yml  envoy-19511b1.yaml  envoy-634c931.yaml  envoy-ed6a1b8.yaml  envoy-local.yaml  envoy-v1.11.yaml  envoy-v1.12.yaml  envoy-v1.13.yaml  envoy-v1.14.yaml  envoy-v1.15.yaml  envoy-v1.16.yaml  envoy-v1.17.yaml  envoy-v1.18.yaml  envoy-v1.19.yaml  envoy-v1.21.yaml  envoy-v1.26.yaml  envoy-v1.27.yaml  service.py
examples/envoy-tracing/services/agent/: Dockerfile  agent.js
examples/envoy-tracing/services/client/: Dockerfile  curljson.sh  install-tools.sh  sigwait.sh
examples/envoy-tracing/services/service1/: Dockerfile  service1.js
examples/nginx-tracing/: Dockerfile  dd-config.json  docker-compose.yml  nginx.conf
fuzz/: .gitignore  Makefile  README.md  glob  glob-manual.cpp  glob.cpp
include/datadog/: opentracing.h  tags.h  version.h
nginx-plugin/: config
nginx-plugin/src/: ngx_http_dd_opentracing_module.cpp  ngx_http_opentracing_module.cpp
nginx-tracing/: Dockerfile  nginx.conf
scripts/: build_nginx_plugin.sh  clang-format-6.0.sh  format.sh  install_dependencies.sh  measure_cmake_build.sh  pull_cppcodec.sh  release.sh  run_coverage.sh  run_unit_tests.sh
src/: agent_writer.cpp  agent_writer.h  base64_rfc4648.cpp  base64_rfc4648.h  base64_rfc4648_unpadded.cpp  base64_rfc4648_unpadded.h  bool.cpp  bool.h  clock.h  dynamic_load.cpp  encoder.cpp  encoder.h  glob.cpp  glob.h  limiter.cpp  limiter.h  logger.cpp  logger.h  make_unique.cpp  make_unique.h  noopspan.cpp  noopspan.h  opentracing.cpp  opentracing_agent.cpp  opentracing_external.cpp  overload.cpp  overload.h  parse_util.cpp  parse_util.h  pending_trace.cpp  pending_trace.h  propagation.cpp  propagation.h  publisher.cpp  publisher.h  recorder.cpp  recorder.h  sample.cpp  sample.h  sampling_mechanism.cpp  (+34 more)
test/: CMakeLists.txt  agent_writer_test.cpp  base64_rfc4648_test.cpp  base64_rfc4648_unpadded_test.cpp  catch.h  glob_test.cpp  limiter_test.cpp  logger_test.cpp  mocks.h  opentracing_test.cpp  propagation_test.cpp  sample_test.cpp  span_buffer_test.cpp  span_test.cpp  tag_propagation_test.cpp  tracer_factory_test.cpp  tracer_options_test.cpp  tracer_test.cpp  upstream_service_test.cpp  version_check_test.cpp  writer_test.cpp
test/integration/: run_integration_tests_local.sh
test/integration/nginx/: Dockerfile  dd-config.json  docker-compose.yml  expected.json  expected_tc1.json  expected_tc6.json  nginx.conf  nginx_integration_test.sh
test/updates-needed/upstream/: curl
test/version/: current_version.cc  version_check
